added some styling

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -9,7 +9,8 @@ a{
 }
 
 body{
-	color: #bfc4c9;
+	color: #F0E1B9FF;
+	background-color: #FCF6F5FF;
 }
 
 h1{
@@ -44,3 +45,14 @@ h1{
 		border: 1px solid #ced4da;
 	}
 }
+
+.landingPage{
+	background-color: rgb(180, 83, 91);
+	padding-bottom: 40px;
+	box-shadow: 40px 70px #F3DB74FF;
+}
+
+// White (#FCF6F5FF), 
+// Vanilla Custard (#F0E1B9FF), 
+// Goldfinch (#F3DB74FF) 
+// Scarlet Sage (#A13941FF)
