Save project and render add project button that makes it possible to render another form to save, also every form has an id of the index

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -8,9 +8,11 @@ a{
 	}
 }
 
+
+
 body{
 	color: #F0E1B9FF;
-	background-color: #FCF6F5FF;
+	background-color: rgb(243, 234, 232);
 }
 
 h1{
@@ -23,9 +25,9 @@ h1{
 }
 
 .form{
-	background-color: #e1faf1;
+	background-color: #d5e9e1;
 	border-radius: 0.25rem;
-	box-shadow: 5px 5px 5px #c6ecde;
+	box-shadow: 5px 5px 7px #a6c2b7;
 	padding: 10px;
 	margin-bottom: 25px;	
 }
