Better logic to make logic for change and the UI makes more scenes this way, rendering about and projectCards done

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -63,6 +63,13 @@ h1{
 	}
 }
 
+.about-container{
+	background-color: white;
+	border-radius: 5px 5px;
+	box-shadow: 5px 5px 5px lightgray;
+	color: #495057;
+}
+
 // White (#FCF6F5FF), 
 // Vanilla Custard (#F0E1B9FF), 
 // Goldfinch (#F3DB74FF) 
