logic to change a project and save changes to database

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -84,9 +84,10 @@ h1{
 }
 
 .landingPage{
-	background-color: rgb(180, 83, 91);
+	background-color: #b4dacc;
 	padding-bottom: 40px;
-	box-shadow: 40px 70px #F3DB74FF;
+	border-radius: 5px 5px;
+	box-shadow: 40px 70px #95b6aa;
 }
 
 .project-image-container{
