--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -35,6 +35,7 @@ h1{
 
 .linked-icons-container{
 	display: flex;
+	justify-content: space-between;
 	align-items: center;
 	background-color: white;
 	border-radius: 5px 5px;
