--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -24,6 +24,12 @@ h1{
 	font-size: 35px;
 }
 
+.delete-icons{
+	color: #b4dacc;
+	font-size: 30px;
+	margin-right: 0 !important;
+}
+
 .linked-icons{
 	color: #b4dacc;
 	font-size: 50px;
@@ -44,10 +50,12 @@ h1{
 }
 
 .email-container{
+	display: flex;
+	justify-content: space-between;
 	background-color: white;
 	border-radius: 5px 5px;
 	box-shadow: 5px 5px 5px lightgray;
-	padding: 10px;
+	padding: 20px;
 	margin-bottom: 10px;
 }
 
