--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -2,12 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
 
 :root{
-	--lightGreen: #a9c4ba;
-	--darkGreen: #95b6aa;
+	--extraLightGrey: #dee3eb;
+	--lightGrey: #ced4da;
+	--darkGrey: rgb(112, 111, 111);
 }
 
 a{
-	color: rgba(0, 0, 0, 0.5);
+	color: var(--darkGrey);
 	&:hover{
 		color: rgba(0, 0, 0, 0.7);
 		text-decoration: none;
@@ -15,10 +16,10 @@ a{
 }
 
 body{
-	color: #495057;
-	background-color: rgb(243, 234, 232);
+	color: var(--darkGrey);
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 1.5rem;
+	height: 100vh;
 }
 
 h1{
@@ -88,27 +89,24 @@ image{
 }
 
 .icons{
-	color: var(--lightGreen);
+	color: var(--lightGrey);
 	font-size: 35px;
 }
 
 .delete-icons{
-	color: var(--lightGreen);
+	color: var(--lightGrey);
 	font-size: 30px;
 	margin-right: 0 !important;
 		&:hover{
-			color: var(--darkGreen);
+			color: var(--darkGrey);
 			cursor: pointer;
 		}
 }
 
 .linked-icons{
-	color: var(--lightGreen);
+	color: var(--darkGrey);
 	font-size: 50px;
-	margin: 20px !important; 
-		&:hover{
-			color: var(--darkGreen);
-		}
+	margin: 20px !important;
 }
 
 .linked-icons-container{
@@ -132,17 +130,18 @@ image{
 }
 
 .form{
-	background-color: #d5e9e1;
+	background-color: var(--lightGrey);
 	border-radius: 0.25rem;
-	box-shadow: 5px 5px 7px #a6c2b7;
+	box-shadow: 5px 5px 7px var(--darkGrey);
 	padding: 10px;
 	margin-bottom: 25px;	
 }
 
 .button{
-	background-color: #ced4da;
+	background-color: var(--extraLightGrey);
 	box-shadow: 3px 3px 3px rgb(165, 164, 164);
 	border: none;
+	color: rgba(0, 0, 0, 0.7);
 		&:hover{
 			background-color: #ced4da;
 			color: rgba(0, 0, 0, 0.7);
@@ -158,7 +157,7 @@ image{
 }
 
 .checked{
-	color: var(--lightGreen)
+	color: var(--lightGrey)
 }
 
 .image-button{
@@ -169,9 +168,9 @@ image{
 }
 
 .landingPage{
-	background-color: var(--lightGreen);
+	background-color: var(--lightGrey);
 	border-radius: 5px 5px;
-	box-shadow: 5px 5px 5px var(--darkGreen);
+	box-shadow: 5px 5px 5px var(--darkGrey);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -189,10 +188,10 @@ image{
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background-color: var(--lightGreen);
+	background-color: var(--lightGrey);
 	padding-bottom: 40px;
 	border-radius: 5px 5px;
-	box-shadow: 30px 40px var(--darkGreen);
+	box-shadow: 30px 40px var(--darkGrey);
 	height: 100%;
 }
 
@@ -200,6 +199,12 @@ image{
 	margin-top: 100px;
 	gap: 90px;
 	height: 200px;
+}
+
+.pointer{
+	&:hover{
+		cursor: pointer;
+	}
 }
 
 .project-image-container{
@@ -212,12 +217,12 @@ image{
 }
 
 .portfolio-content{
-	height: 100px;
+	height: 100%;
 	width: 100px;
 }
 
 .portfolio-container{
-	border-left: 1px solid var(--darkGreen);
+	border-left: 1px solid var(--darkGrey);
 }
 
 .about-container{
@@ -250,11 +255,16 @@ image{
 	justify-content: space-between;
 }
 
-// .footer{
-// 	position: fixed;
-// 	bottom: 0px;
-// 	width: 100%;
-// }
+.footer{
+	background-color: var(--lightGrey);
+	// position: fixed;
+	// bottom: 0px;
+	// width: 100%;
+}
+
+.navigation{
+	background-color: var(--lightGrey);
+}
 
 .zoomCointainer{
 	height: 100px; 
