--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -17,8 +17,8 @@ a{
 
 body{
 	color: var(--darkGrey);
-	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 1.5rem;
+	// font-family: 'Roboto Condensed', sans-serif;
+	// font-size: 1.5rem;
 	height: 100vh;
 }
 
@@ -103,6 +103,16 @@ image{
 		}
 }
 
+.logo{
+	font-size: 1.5rem;
+	margin-left: 10px;
+}
+
+.logo-link{
+	display: flex;
+	align-items: center;
+}
+
 .linked-icons{
 	color: var(--darkGrey);
 	font-size: 50px;
@@ -151,6 +161,7 @@ image{
 .card{
 	height: 100%;
 	background-color: white;
+	border: none;
 	border-radius: 5px 5px;
 	box-shadow: 5px 5px 5px lightgray;
 	color: #495057;
@@ -168,21 +179,24 @@ image{
 }
 
 .landingPage{
+	align-items: center;
 	background-color: var(--lightGrey);
 	border-radius: 5px 5px;
 	box-shadow: 5px 5px 5px var(--darkGrey);
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	margin: 50px;
+	margin-left: auto;
+	margin-right: auto;
 	padding-bottom: 40px;
 }
 
-.center{
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
+// .center{
+// 	position: fixed;
+// 	top: 50%;
+// 	left: 50%;
+// 	transform: translate(-50%, -50%);
+// }
 
 .box-styles{
 	display: flex;
@@ -232,9 +246,16 @@ image{
 }
 
 .save-portfolio-button{
-	width: 100vw;
-    margin: 30px;
+	font-size: 1rem;
+	height: 50px;
+	margin-left: 10px;
+	margin-bottom: 30px;
+	margin-top: 200px;
 }
+
+// .save-portfolio-button-container{
+// 	margin: 0, auto !important;
+// }
 
 .theme-color-list{
 	list-style-type: none;
@@ -246,6 +267,13 @@ image{
 	justify-content: space-between;
 	align-items: center;
 	margin-bottom: 10px;
+}
+
+.theme-container{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+	justify-content: space-between;
 }
 
 .user-site-container{
