--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -171,6 +171,16 @@ image{
 	color: var(--lightGrey)
 }
 
+.color-image{
+	width: 300px;
+}
+
+.color-example-card{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
 .image-button{
 	&:hover{
 		color: #ced4da;
