--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -6,6 +6,9 @@
 	--lightGrey: #ced4da;
 	--mediumGrey: #b8bcc0;
 	--darkGrey: rgb(112, 111, 111);
+	--lightBlue: #45798f;
+	--blue: #295e74;
+	--darkBlue: #214a5c;
 }
 
 * {
@@ -30,65 +33,22 @@ image{
 	height: auto;
 }
 
-.theme-color-section{
-	height: 50px;
-    width: 150px;
-	text-align: center;
-	padding-top: 5px;
-}
-
-.white-theme-1{
-	background-color: white;
-}
-
-.white-theme-2{
-	background-color: #495057;
-}
-
-.blue-theme-1{
-	background-color: #568EA6;
-}
-
-.blue-theme-2{
-	background-color: #305F72;
-}
-
-.peach-theme-1{
-	background-color: #f8c0c5;
-}
-
-.peach-theme-2{
-	background-color: #df9da4;
-}
-
-.beige-theme-1{
-	background-color:#f0d8ca;
-}
-
-.beige-theme-2{
-	background-color: #dec9bd;
-}
-
-.green-theme-1{
-	background-color: #77ACA2;
-}
-
-.green-theme-2{
-	background-color: #9DBEBB;
-}
-
-.purple-theme-1{
-	background-color: #b8b1c4;
-}
-
-.purple-theme-2{
-	background-color: #988faa;
-}
 
 .app{
 	display: flex;
 	flex-direction: column;
 	height: 100vh;
+}
+
+.about-container{
+	background-color: white;
+	border-radius: 5px 5px;
+	box-shadow: 5px 5px 5px lightgray;
+	padding: 20px 40px;
+	margin: 20px;
+	&.card{
+		height: auto;
+	}
 }
 
 .background-image{
@@ -102,125 +62,59 @@ image{
 	}
 }
 
-.background-image-none{
-	width: 100px;
-	padding: 10px;
-	background-color: white;
-}
-
-.create-form{
-	display: flex;
-	justify-content: space-between;
-	margin: 0;
-}
-
-.icons{
-	color: var(--darkGrey);
-	font-size: 35px;
-}
-
-.delete-icons{
-	color: var(--mediumGrey);
-	font-size: 30px;
-	margin-right: 0 !important;
-		&:hover{
-			color: var(--darkGrey);
-			cursor: pointer;
-		}
-}
-
-.delete-icon{
-	margin: 10px;
-	display: flex;
-	justify-content: flex-end;
-}
-
-.dropdown-menu{
-	left: auto;
-	right: 10px;
-}
-
-.dropdown-item.active{
-	background-color: #ced4da;
-	color: rgba(0, 0, 0, 0.7);
-}
-
-.logo{
-	font-size: 1.5rem;
-	margin-left: 10px;
-}
-
-.logo-link{
+.box-styles{
+	opacity: 0.8;
 	display: flex;
 	align-items: center;
-}
-
-.linked-icons{
-	color: var(--darkGrey);
-	font-size: 50px;
-	margin: 20px !important;
-}
-
-.nav-icons{
-	color: #295e74;
-	font-size: 50px;
-	margin: 20px !important;
-}
-
-.linked-icons-container{
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	flex-direction: row;
-	background-color: white;
-	border-radius: 5px 5px;
-	box-shadow: 5px 5px 5px lightgray;
-	padding: 20px;
-	margin: 20px;
-	&.card{
-		height: auto;
-	}
-}
-
-.email-container{
-	display: flex;
-	justify-content: space-between;
-	flex-direction: row;
-	background-color: white;
-	border-radius: 5px 5px;
-	box-shadow: 5px 5px 5px lightgray;
-	padding: 20px;
-	margin: 20px;
-	&.card{
-		height: auto;
-	}
-}
-
-.form{
+	justify-content: center;
 	background-color: var(--lightGrey);
-	border-radius: 0.25rem;
-	box-shadow: 5px 5px 7px var(--darkGrey);
-	padding: 10px;
-	margin-bottom: 25px;	
+	padding-bottom: 40px;
+	border-radius: 5px 5px;
+	box-shadow: 10px 10px 10px var(--darkGrey);
+	height: 150px;
+	margin-bottom: 50px;
+	margin-left: 100px;
+
+	@media screen and (max-width: 762px) {
+		margin: 20px;
+	}
+}
+
+.box-styles-example{
+	opacity: 0.8;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: var(--lightGrey);
+	padding-bottom: 40px;
+	border-radius: 5px 5px;
+	box-shadow: 5px 5px 5px var(--darkGrey);
+	margin-bottom: 50px;
+	margin-left: 50px;
+	height: 100px;
+	@media screen and (max-width: 1000px) {
+		margin: 30px;
+	}
 }
 
 .button{
-	background-color: var(--extraLightGrey);
-	box-shadow: 3px 3px 3px rgb(165, 164, 164);
+	background-color: var(--blue);
+	box-shadow: 3px 3px 3px var(--darkBlue);
 	border: none;
-	color: rgba(0, 0, 0, 0.7);
+	color: whitesmoke;
 		&:hover{
-			background-color: #ced4da;
-			color: rgba(0, 0, 0, 0.7);
+			background-color: var(--darkBlue);
+			color: white;
 		}
 		&:focus{
-			background-color: #ced4da;
-			color: rgba(0, 0, 0, 0.7);
+			background-color: var(--darkBlue);
+			color: white;
 			border-color: none;
 		}
 		&:disabled{
-			background-color: var(--extraLightGrey);
-			color: grey;
+			background-color: var(--lightBlue);
+			color: var(--extraLightGrey);
+			box-shadow: none;
 		}
 }
 
@@ -261,6 +155,60 @@ image{
 	}
 }
 
+.create-form{
+	display: flex;
+	justify-content: space-between;
+	margin: 0;
+}
+
+.delete-icons{
+	color: var(--mediumGrey);
+	font-size: 30px;
+	margin-right: 0 !important;
+	&:hover{
+		color: var(--darkGrey);
+		cursor: pointer;
+	}
+}
+
+.delete-icon{
+	margin: 10px;
+	display: flex;
+	justify-content: flex-end;
+}
+
+.dropdown-menu{
+	left: auto;
+	right: 10px;
+}
+
+.dropdown-item.active{
+	background-color: #ced4da;
+	color: rgba(0, 0, 0, 0.7);
+}
+
+.email-container{
+	display: flex;
+	justify-content: space-between;
+	flex-direction: row;
+	background-color: white;
+	border-radius: 5px 5px;
+	box-shadow: 5px 5px 5px lightgray;
+	padding: 20px;
+	margin: 20px;
+	&.card{
+		height: auto;
+	}
+}
+
+.form{
+	background-color: var(--lightGrey);
+	border-radius: 0.25rem;
+	box-shadow: 5px 5px 7px var(--darkGrey);
+	padding: 10px;
+	margin-bottom: 25px;	
+}
+
 .form-container{
 	@media screen and (max-width: 762px) {
 		padding: 0px;
@@ -271,6 +219,15 @@ image{
 	@media screen and (max-width: 762px) {
 		padding: 0px;
 	}
+}
+
+.footer{
+	background-color: var(--lightGrey);
+}
+
+.icons{
+	color: var(--darkGrey);
+	font-size: 35px;
 }
 
 .image-button{
@@ -332,44 +289,54 @@ image{
 	background-color: whitesmoke;
 }
 
-.box-styles{
-	opacity: 0.8;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	background-color: var(--lightGrey);
-	padding-bottom: 40px;
-	border-radius: 5px 5px;
-	box-shadow: 10px 10px 10px var(--darkGrey);
-	height: 150px;
-	margin-bottom: 50px;
-	margin-left: 100px;
-
-	@media screen and (max-width: 762px) {
-		margin: 20px;
-	}
-}
-
-.box-styles-example{
-	opacity: 0.8;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	background-color: var(--lightGrey);
-	padding-bottom: 40px;
-	border-radius: 5px 5px;
-	box-shadow: 5px 5px 5px var(--darkGrey);
-	margin-bottom: 50px;
-	margin-left: 50px;
-	height: 100px;
-	@media screen and (max-width: 1000px) {
-		margin: 30px;
-	}
-}
-
 .landingPage-row{
 	margin: 0;
 	justify-content: center;
+}
+
+.left-quote{
+	margin-right: 10px;
+}
+
+.logo{
+	font-size: 1.5rem;
+	margin-left: 10px;
+}
+
+.logo-link{
+	display: flex;
+	align-items: center;
+}
+
+.linked-icons{
+	color: var(--darkGrey);
+	font-size: 50px;
+	margin: 20px !important;
+}
+
+.linked-icons-container{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-direction: row;
+	background-color: white;
+	border-radius: 5px 5px;
+	box-shadow: 5px 5px 5px lightgray;
+	padding: 20px;
+	margin: 20px;
+	&.card{
+		height: auto;
+	}
+}
+
+.nav-icons{
+	color: #295e74;
+	font-size: 50px;
+	margin: 20px !important;
+}
+
+.navigation{
+	background-color: var(--lightGrey);
 }
 
 .pointer{
@@ -391,15 +358,25 @@ image{
 	height: 100%;
 }
 
-.about-container{
-	background-color: white;
-	border-radius: 5px 5px;
-	box-shadow: 5px 5px 5px lightgray;
-	padding: 20px 40px;
-	margin: 20px;
-	&.card{
-		height: auto;
+.project-page-row{
+	justify-content: center;
+}
+.quotes-column{
+	display: flex;
+	align-items: center;
+	@media screen and (max-width: 762px) {
+		display: none;
 	}
+}
+
+.quote-text{
+	padding: 0 3rem;
+	font-size: 40px;
+	color: #295e74;
+}
+
+.right-quote{
+	margin-left: 10px;
 }
 
 .save-portfolio-button{
@@ -486,16 +463,6 @@ image{
 	justify-content: center;
 }
 
-.footer{
-	background-color: var(--lightGrey);
-	// background-color: #83aabb;
-}
-
-.navigation{
-	background-color: var(--lightGrey);
-	// background-color: #83aabb;
-}
-
 .zoomCointainer{
 	height: 100px; 
 	overflow: hidden;
@@ -510,13 +477,70 @@ image{
 	}
 }
 
-.zoom-colorize {
-	transition: transform .5s, filter 1.5s ease-in-out;
-	filter: grayscale(100%);
-	&:hover{
-		filter: grayscale(0);
-		transform: scale(1.5);
-	}
+// .zoom-colorize {
+// 	transition: transform .5s, filter 1.5s ease-in-out;
+// 	filter: grayscale(100%);
+// 	&:hover{
+// 		filter: grayscale(0);
+// 		transform: scale(1.5);
+// 	}
+// }
+
+// ThemeColors and classes
+
+.theme-color-section{
+	height: 50px;
+    width: 150px;
+	text-align: center;
+	padding-top: 5px;
+}
+
+.white-theme-1{
+	background-color: white;
+}
+
+.white-theme-2{
+	background-color: #495057;
+}
+
+.blue-theme-1{
+	background-color: #568EA6;
+}
+
+.blue-theme-2{
+	background-color: #305F72;
+}
+
+.peach-theme-1{
+	background-color: #f8c0c5;
+}
+
+.peach-theme-2{
+	background-color: #df9da4;
+}
+
+.beige-theme-1{
+	background-color:#f0d8ca;
+}
+
+.beige-theme-2{
+	background-color: #dec9bd;
+}
+
+.green-theme-1{
+	background-color: #77ACA2;
+}
+
+.green-theme-2{
+	background-color: #9DBEBB;
+}
+
+.purple-theme-1{
+	background-color: #b8b1c4;
+}
+
+.purple-theme-2{
+	background-color: #988faa;
 }
 
 .pink{
@@ -760,30 +784,4 @@ image{
 			}
 		}
 	}
-}
-
-.project-page-row{
-	justify-content: center;
-}
-
-.quotes-column{
-	display: flex;
-	align-items: center;
-	@media screen and (max-width: 762px) {
-		display: none;
-	}
-}
-
-.right-quote{
-	margin-left: 10px;
-}
-
-.left-quote{
-	margin-right: 10px;
-}
-
-.quote-text{
-	padding: 0 3rem;
-	font-size: 40px;
-	color: #295e74;
 }
