--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -27,6 +27,7 @@ a{
 
 body{
 	color: var(--darkGrey);
+	font-family: 'Roboto Condensed', sans-serif;
 }
 
 image{
@@ -139,7 +140,6 @@ image{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin: 20px;
 	height: 100%;
     padding-bottom: 20px;
 }
@@ -159,6 +159,10 @@ image{
 	display: flex;
 	justify-content: space-between;
 	margin: 0;
+}
+
+.create-form-container{
+	max-width: 2000px;
 }
 
 .delete-icons{
