--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -142,6 +142,8 @@ image{
 	align-items: center;
 	height: 100%;
     padding-bottom: 20px;
+	padding-left: 0;
+	margin: 10px;
 }
 
 .create-form-menu{
@@ -163,6 +165,7 @@ image{
 
 .create-form-container{
 	max-width: 2000px;
+	margin-top: 20px;
 }
 
 .delete-icons{
@@ -465,6 +468,7 @@ image{
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	padding: 0;
 }
 
 .zoomCointainer{
